bedita-app/webroot/css/bedita.css
/* ... */
fieldset,img { 
	border:0;
}
address,caption,cite,code,dfn,em,strong,th,var {
	font-style:normal;
	font-weight:normal;
}
ol,ul {
	list-style:none;
}
caption,th {
	text-align:left;
}
h1,h2,h3,h4,h5,h6 {
	font-size:100%;
	font-weight:normal;
}
q:before,q:after {
	content:'';
}
abbr,acronym { border:0;
}

article, aside, figure, footer, header, hgroup, nav, section {display: block;}

/*...........................................    

    General, elements

...........................................*/


BODY, .bodybg, .catselector {
	background-color:#B6B6B6;
}


TD {padding:2px; vertical-align:middle}

HR {height:0px; border:0px; margin:10px 0px 10px 0px; border-top:1px solid gray}

A {color:#000000}

a img {border:0px;}

a:focus, a:active {outline:0px;}

a:link, a:visited, a:active {text-decoration: none; }

a:hover {text-decoration: none;}

UL {list-style:none;}

UL UL {margin-left:20px;}

/*...........................................    

    General, states

...........................................*/

.on, LI.on {font-weight:bold;}
.info {color:green}
.warn {color:yellow}
.err  {color:red}

.obj.on {font-weight:normal;}
.obj.disabled {opacity:0.5}
.obj.draft *, .obj.off *, .obj.required *   {color:#666666}


/*...........................................
 
    Structure

...........................................*/


.modulesmenu, .head, .main, .mainfull  {position:absolute; left:300px; margin-right:0px;}


.head {
	z-index:80;
	top:50px;
	height:80px;
	/*
	width: 660px;
	*/
	padding-left:20px;
}

.modulesmenu {
	z-index:280;
}

.primacolonna {
	position:absolute; 
	top:20px;
	left:20px;
	z-index:102;
	width:140px;
}

.secondacolonna {
	position:absolute;
	top:20px;
	left:160px;
	z-index:100;
	width:140px;
}


.insidecol {
	margin: 10px 0px 0px 0px;
}

.terzacolonna {
	position:absolute;
	width:180px;
	left:280px;
}
	

.fixed {
	
	position:fixed;
	
}


.quartacolonna {
	position:absolute; 
	left:970px;
	width:180px;
	top:130px;
	min-height:400px;
}

.main {
	top:130px;
	width: 660px; 
}

.mainfull, .main.full {
	top:130px;
	min-width: 660px;
	padding-right:20px;
}

.mainfull .tab, .main.full .tab {
	/*
width: 660px;
*/
}

.mainhalf, .main.half {
	width: 340px;
	margin-right:10px;
	float:left;
}

.mainhalf .tab, .main.half .tab{
	width: 340px;
}

/*...........................................
 
    Kind of columns

...........................................*/


.doppia {
	width: 260px;
	padding-right:20px;
}

.singola {
	width: 140px;
	padding-right:0px;
	float:left;
}

.singolapadded {
	padding:20px;
	width: 100px;
	float:left;
}

.doppia, .singola, .singolapadded {margin-bottom:10px}


	
/*...........................................
 
    Headings and all typography

...........................................*/

BODY {font-size:12px; font-family: "Helvetica Neue","Helvetica","Arial", sans-serif; line-height:1.5em;}

H1 {font:normal 2em "Georgia", "Times New Roman", Times, serif; line-height:1em}

H2 {font:normal 1.5em "Georgia", "Times New Roman", Times, serif; line-height:1em}

INPUT[type=text],INPUT[type=password], TEXTAREA {
	font-size:12px; font-family: "Arial", "Helvetica","Verdana", sans-serif; line-height:1.5em;
}

.modules {font-family: "Arial", "Helvetica", sans-serif}

.tab H2,  .tab2 H2 {
	font-family: "Arial", "Helvetica", sans-serif;
	font-size:1em; font-weight:normal; 
}
.pub H2 {
	font-family: "Arial", "Helvetica", sans-serif;
	font-size:0.8rem; font-weight:normal; 
}

.toolbar {
	font:normal 1.2em "Georgia", "Times New Roman", Times, serif;
}

.graced, .serif {font-family: "Georgia", "Times New Roman", Times, serif;}

.sans {font-family: "Helvetica Neue","Helvetica","Arial", sans-serif;}

.monospaced {font-family: monospace;}

.toolbar.sans {
	font-size:1em;	
}

/*...........................................
 
    Modules

...........................................*/

.modules {
	/*background:transparent url(../img/shadowpattern160.png);*/
	width:auto;
	height:110px;
}

UL.modules {
	/*background:transparent url(../img/shadowh2-small.png) repeat-y top left ;*/
}

.modules.block LI, .modules label {
	display:block;
	font-size: 1.16em ;
	width:120px; 
	height:90px; 
	padding:10px;
	margin: 0px;
	background-color:#CCCCCC; 
/*
	background-image: url(../img/sfomodulo.png);
	background-repeat:repeat-x;
*/
	color:#FFFFFF;
	float:left;
	font-weight:normal;
}

.modules LI:first-letter, .modules label:first-letter {
	text-transform:capitalize;
}


.modulesmiddle {
	background: transparent url(../img/shadowpattern240.png);
	width:220px;
	min-height:220px;
	padding:10px;	
}

.modulesmiddle DIV {
	width:200px;
	min-height:195px;
	padding:10px;
}

.listrecent {
	display:block; height:15px; width:15px; margin-left:-10px; margin-right:5px; float:left;
	border-radius:10px;
}

#objtable .listrecent {
	margin:5px -15px 5px 10px;
}


.smallist .on {
	font-weight: normal;
}
.smallist .off {
	color: gray;
}
.smallist .draft {
	color: gray;
}

/*...........................................
 
    Each Modules appearence

...........................................*/

.areas, .area, .section 	{background-color:#626151 !important;}
.documents, .document		{background-color:#ff6600 !important;}
.galleries, .gallery 		{background-color:#FFBF00 !important;}
.events, .event				{background-color:#0099CC !important;}
.newsletter 				{background-color:#99cc33 !important;}
.multimedia, .image, .audio, .video, .b_e_file, .application, .befile	
							{background-color:#ff0033 !important;}
.admin 						{background-color:#333333 !important;}
.users 						{background-color:#555 !important;}
.tags 						{background-color:#336666 !important;}
.comments, .comment			{background-color:#F08080 !important;}
.translations				{background-color:#FF00FF !important;}
.addressbook, .card			{background-color:#009933 !important;}
.attachments 				{background-color:gray !important;}
.news, .short_news, .shortnews 			{background-color:#003366 !important;}
.newsletter 				{background-color:#6666FF !important;}
/* ... */

